@@ -4500,6 +4500,17 @@ return|return
 literal|null
 return|;
 block|}
+name|BackupResourceDownloader
+name|backupDownloader
+init|=
+operator|new
+name|BackupResourceDownloader
+argument_list|(
+name|downloader
+argument_list|)
+decl_stmt|;
+try|try
+block|{
 if|if
 condition|(
 operator|!
@@ -4862,17 +4873,6 @@ block|}
 block|}
 block|}
 block|}
-name|BackupResourceDownloader
-name|backupDownloader
-init|=
-operator|new
-name|BackupResourceDownloader
-argument_list|(
-name|downloader
-argument_list|)
-decl_stmt|;
-try|try
-block|{
 name|Artifact
 name|originalMetadataArtifact
 init|=
